# learn-gaussian-splatting

./: .gitignore  LICENSE  README.md  camera.py  colmap_loader.py  dataset_readers.py  gaussian.py  main.py  pyproject.toml  render.py  spherical.py  utils.py
